# CHIP-8-Emulator-for-PicoCalc

./: README.md  picocalc-chip8-pico.uf2  picocalc-chip8-pico2.uf2  picocalc-chip8.uf2
CHIP-8/: CMakeLists.txt  LICENSE2
CHIP-8/apps/chip8/: CMakeLists.txt
CHIP-8/apps/chip8/src/app/: main.c  rom_menu.c  rom_menu.h
CHIP-8/apps/chip8/src/core/: chip8.c  chip8.h  chip8_config.h
CHIP-8/apps/chip8/src/platform/: chip8_picocalc.c  chip8_picocalc.h
CHIP-8/drivers/: console.c  console.h  display.c  gfx.c  gfx.h  lcd.c  lcd.h
